[#76535342] move side contents down to avoid overlap on iPad 6

--- a/manchester_traffic_offences/assets/stylesheets/main.css
+++ b/manchester_traffic_offences/assets/stylesheets/main.css
@@ -1764,7 +1764,7 @@ table th.header {
   height: 0;
   left: 0;
   position: absolute;
-  top: 9.5em;
+  top: 10em;
   width: 100%;
   z-index: 0; }
 
